<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:orderInCategory="100"
        android:id="@+id/menu_shop"
        android:title="@string/menu_shop"
        android:icon="@drawable/menu_shop"
        app:showAsAction="always"
        />
    <item
        android:orderInCategory="200"
        android:id="@+id/menu_profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/menu_profile"
        app:showAsAction="always"
        />
    <item
        android:orderInCategory="300"
        android:id="@+id/menu_map"
        android:title="@string/menu_map"
        android:icon="@drawable/menu_map"
        app:showAsAction="always"
        />
    <item
        android:orderInCategory="400"
        android:id="@+id/menu_chat"
        android:title="@string/menu_teams"
        android:icon="@drawable/menu_chat"
        app:showAsAction="always"
        />
    <item
        android:orderInCategory="500"
        android:id="@+id/menu_quests"
        android:title="@string/menu_quests"
        android:icon="@drawable/menu_quests"
        app:showAsAction="always"
        />
    <item
        android:orderInCategory="600"
        android:id="@+id/menu_team_quests"
        android:title="@string/menu_quests"
        android:icon="@drawable/menu_team_quests"
        app:showAsAction="always"
        />
</menu>