<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="1000dp"
    android:minHeight="350dp"
    android:columnCount="5"
    android:rowCount="8"
    tools:context="com.severenity.view.fragments.clans.TeamLogoFragment">


    <ImageButton
        android:id="@+id/currentTeamLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_x="256dp"
        android:layout_y="3dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:contentDescription="@string/current_team_logo" />

    <TextView
        android:id="@+id/currentLogoIs"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="90dp"
        android:layout_y="6dp"
        android:text="@string/current_team_logo" />

    <ImageButton
        android:id="@+id/ic_team_1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_x="30dp"
        android:layout_y="145dp"
        android:background="@null"
        android:src="@drawable/ic_team_1"
        android:contentDescription="@string/team_logo_1"/>

    <ImageButton
        android:id="@+id/ic_team_2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_x="80dp"
        android:layout_y="145dp"
        android:background="@null"
        android:src="@drawable/ic_team_2"
        android:contentDescription="@string/team_logo_2"/>

    <ImageButton
        android:id="@+id/ic_team_3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_x="130dp"
        android:layout_y="145dp"
        android:background="@null"
        android:src="@drawable/ic_team_3"
        android:contentDescription="@string/team_logo_3"/>

    <ImageButton
        android:id="@+id/ic_team_4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_x="180dp"
        android:layout_y="145dp"
        android:background="@null"
        android:src="@drawable/ic_team_4"
        android:contentDescription="@string/team_logo_4"/>

    <ImageButton
        android:id="@+id/ic_team_5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_x="230dp"
        android:layout_y="145dp"
        android:background="@null"
        android:src="@drawable/ic_team_5"
        android:contentDescription="@string/team_logo_5"/>

    <Button
        android:id="@+id/addCustomIconBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="205dp"
        android:text="@string/add_custom_logo_button" />

    <Button
        android:id="@+id/saveCustomIconBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="180dp"
        android:layout_y="205dp"
        android:text="@string/save_custom_logo_button" />

</AbsoluteLayout>
