<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryDark"
    android:elevation="4dp">
    <RelativeLayout
        android:id="@+id/userInfo"
        android:background="@color/primaryDark"
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/mapUserAvatar"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:gravity="center"
            android:id="@+id/tvImmunityValue"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/mapUserAvatar"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:text="@string/immunity_value" />

        <TextView
            android:gravity="center"
            android:id="@+id/tvEnergyValue"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvImmunityValue"
            android:layout_margin="5dp"
            android:layout_marginBottom="0dp"
            android:textSize="12sp"
            android:text="@string/energy_value" />

        <TextView
            android:gravity="center"
            android:id="@+id/tvExperienceValue"
            android:textColor="@color/white"
            android:layout_below="@id/tvImmunityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/mapUserAvatar"
            android:layout_margin="5dp"
            android:layout_marginBottom="0dp"
            android:textSize="12sp"
            android:text="@string/experience_value" />

        <TextView
            android:gravity="center"
            android:id="@+id/tvLevelValue"
            android:textColor="@color/white"
            android:layout_below="@id/tvImmunityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvExperienceValue"
            android:layout_margin="5dp"
            android:layout_marginBottom="0dp"
            android:textSize="12sp"
            android:text="@string/level_value" />
    </RelativeLayout>
</android.support.v7.widget.Toolbar>