<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragments.clans.TeamFragment">

    <TextView
        android:drawableStart="@android:drawable/star_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/teamModeratorText"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textSize="12sp"
        android:layout_alignParentStart="true"
        android:layout_margin="4dp" />

    <TextView
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/team_name_double_dot"
        android:id="@+id/name"
        android:layout_margin="4dp"
        android:layout_below="@+id/teamModeratorText"
        android:layout_alignStart="@+id/teamModeratorText"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_margin="4dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/name"
        android:layout_marginTop="4dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/teamNameText"
        android:layout_below="@id/teamModeratorText"
        android:gravity="center"
        android:textAlignment="center"
        android:maxLines="1" />

    <ImageButton
        android:id="@+id/teamLogoBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitXY"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/teamModeratorText"
        android:layout_margin="4dp"
        android:background="@null"
        android:contentDescription="@string/current_team_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/captionLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/teamLogoBtn"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N"
            android:id="@+id/textView"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="i"
            android:id="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:layout_marginStart="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/member"
            android:id="@+id/textView3"
            android:gravity="start|center_vertical"
            android:layout_toEndOf="@+id/textView"
            android:paddingStart="5dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/experience"
            android:id="@+id/textView4"
            android:layout_toStartOf="@+id/textView2"
            android:paddingStart="5dp"
            android:gravity="center_vertical|center_horizontal" />
    </RelativeLayout>

    <com.severenity.view.custom.CustomListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/usersInTeamList"
        android:divider="#00000000"
        android:layout_below="@+id/captionLayout"
        android:background="#a1a1a1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:choiceMode="singleChoice"
        android:drawSelectorOnTop="true"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leaveTeam"
        android:background="#00333333"
        android:addStatesFromChildren="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/leaveTeamButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="#55333333"
            android:text="@string/leave_button" />

    </FrameLayout>

</RelativeLayout>