<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragments.clans.TeamsListFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:id="@+id/searchCriteria"
        android:maxLength="2000"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/search"
        android:textSize="14sp"
        android:background="#a1a1a1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="4dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_toStartOf="@+id/createTeam"
        android:layout_alignParentEnd="false" />

    <TextView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="+"
        android:id="@+id/createTeam"
        android:layout_toStartOf="@+id/imageView"
        android:layout_alignTop="@+id/searchCriteria"
        android:gravity="center_vertical|center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/search_icon"
        android:visibility="visible"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/searchCriteria"
        android:layout_marginEnd="8dp"
        android:contentDescription="searchButton" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/captionLayout"
        android:layout_below="@+id/searchCriteria"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp">

        <TextView
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="N"
            android:id="@+id/textView"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="+"
            android:id="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:layout_marginStart="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/team_name"
            android:id="@+id/textView3"
            android:gravity="start|center_vertical"
            android:layout_toEndOf="@+id/textView"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/users"
            android:id="@+id/textView4"
            android:layout_toStartOf="@+id/textView2"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal" />
    </RelativeLayout>

    <com.severenity.view.custom.CustomListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/teamsList"
        android:divider="#00000000"
        android:layout_below="@+id/captionLayout"
        android:background="#a1a1a1"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:choiceMode="singleChoice" />

</RelativeLayout>